2009-03-04  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/39339
	* tree-sra.c (try_instantiate_multiple_fields): Make it
	no longer ICE on the above.

	* gcc.c-torture/execute/pr39339.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144598 138bc75d-0d04-0410-961f-82ee72b054a4